Fixed swagger UI, embedded v3 and edited its code to make it work.
